# sigrefmc-sttt16

./: .travis.yml  CMakeLists.txt  README.md  exp-blocks-last.py  exp.py  expfw.py  recompile.py  sigrefmc  sigrefmc_ht  update_sylvan.sh
doc/: extending.tex  implementation.tex  inert.tex  introduction.tex  literature.bib  macros.tex  preamble.tex  refine.tex  usage.tex
mcrl2/: .gitignore  README  generate.py
mcrl2/gen-lps/: Composition.mcrl2  INESS_iter1_r468.mcrl2  WMS.mcrl2  abp-b.mcrl2  abp-e.mcrl2  abp-s.mcrl2  abp.mcrl2  act.mcrl2  brp-b.mcrl2  brp-e.mcrl2  brp-s.mcrl2  brp.mcrl2  chamber.mcrl2  compare.sh  l2.mcrl2  (+40 more)
models/: WMS.bdd  abp_2-b.bdd  abp_3-b.bdd  abp_4-b.bdd  brp_2_3_3-b.bdd  brp_2_3_4-b.bdd  brp_2_4_3-b.bdd  brp_2_4_4-b.bdd  brp_3_3_3-b.bdd  brp_3_3_4-b.bdd  brp_3_4_3-b.bdd  brp_3_4_4-b.bdd  brp_4_3_3-b.bdd  brp_4_3_4-b.bdd  brp_4_4_3-b.bdd  brp_4_4_4-b.bdd  cycling-2.xctmc  cycling-3.xctmc  dkr_2-b.bdd  dkr_3-b.bdd  fgf.xctmc  franklin_2_2-b.bdd  franklin_3_2-b.bdd  franklin_3_3-b.bdd  franklin_4_2-b.bdd  ftwc01.xctmc  ftwc01.ximc  ftwc02.ximc  ftwc03.ximc  hesselink_2-b.bdd  hesselink_3-b.bdd  hesselink_4-b.bdd  hesselink_5-b.bdd  kanban-3.xctmc  kanban-4.xctmc  kanban01.xlts  kanban02.xlts  kanban03.xlts  kanban04.xlts  kanban05.xlts  (+72 more)
out-q/: WMS-b-block-1-0  WMS-b-block-1-1  WMS-b-block-1-2  WMS-b-block-1-4  WMS-b-block-1-5  WMS-b-block-48-0  WMS-b-block-48-1  WMS-b-block-48-2  WMS-b-block-48-3  WMS-b-block-48-4  WMS-b-block-48-5  WMS-b-block-48-6  WMS-b-blocks1-1-0  WMS-b-blocks1-1-2  WMS-b-blocks1-1-3  WMS-b-blocks1-1-5  WMS-b-blocks1-48-0  WMS-b-blocks1-48-1  WMS-b-blocks1-48-2  WMS-b-blocks1-48-3  WMS-b-blocks1-48-4  WMS-b-blocks1-48-5  WMS-b-pick-1-0  WMS-b-pick-1-1  WMS-b-pick-1-2  WMS-b-pick-1-4  WMS-b-pick-1-5  WMS-b-pick-48-0  WMS-b-pick-48-1  WMS-b-pick-48-2  WMS-b-pick-48-3  WMS-b-pick-48-4  WMS-b-pick-48-5  WMS-s-block-1-1  WMS-s-block-1-2  WMS-s-block-1-4  WMS-s-block-1-5  WMS-s-block-48-0  WMS-s-block-48-1  WMS-s-block-48-2  (+7979 more)
out-q-blocks-last/: cycling-2-block-1-0  cycling-2-block-1-2  cycling-2-block-1-3  cycling-2-block-48-0  cycling-2-block-48-1  cycling-2-block-48-2  cycling-2-block-48-3  cycling-2-block-48-4  cycling-2-blocks1-1-2  cycling-2-blocks1-1-3  cycling-2-blocks1-48-0  cycling-2-blocks1-48-1  cycling-2-blocks1-48-2  cycling-2-blocks1-48-3  cycling-2-blocks1-48-4  cycling-2-pick-1-0  cycling-2-pick-1-2  cycling-2-pick-1-3  cycling-2-pick-48-0  cycling-2-pick-48-1  cycling-2-pick-48-2  cycling-2-pick-48-3  cycling-2-pick-48-4  cycling-3-block-1-0  cycling-3-block-1-1  cycling-3-block-1-2  cycling-3-block-1-3  cycling-3-block-1-4  cycling-3-block-48-0  cycling-3-block-48-1  cycling-3-block-48-2  cycling-3-block-48-3  cycling-3-block-48-4  cycling-3-blocks1-1-0  cycling-3-blocks1-1-1  cycling-3-blocks1-1-2  cycling-3-blocks1-1-3  cycling-3-blocks1-1-4  cycling-3-blocks1-48-0  cycling-3-blocks1-48-1  (+1826 more)
src/: CMakeLists.txt  bisim_ctmc.cpp  bisim_imc.cpp  bisim_lts.cpp  bisimulation.hpp  blocks.c  inert.c  parse_bdd.hpp  quotient.hpp  refine.h  refine_ht.c  refine_sl.c  sigref.cpp  sigref.h  sigref_util.hpp  systems.hpp  writer.cpp
tool/: .gitignore  CMakeLists.txt
tool/doc/: background.tex  limitations.tex  main.tex
tool/src/: bisim_imc.cpp  bisim_lts.cpp  bisimulation.h  blocks.h  getrss.h  inert.c  inert.h  parse_bdd.cpp  parse_xml.cpp  parse_xml.hpp  quotient.cpp  refine.h  refine_sl.c  sigref.cpp  sigref.h  sigref_util.cpp  sigref_util.h  writer.hpp
